package at.htlleonding.leoplaner.data;

public enum SchoolDays {
    MONDAY,
    TUESDAY,
    WEDNESDAY,
    THURSDAY,
    FRIDAY,
    SATURDAY
}
