package at.htlleonding.leoplaner.data;

import java.util.ArrayList;

public class Timetable {
  private ClassSubjectInstance[] timetable;
  private ArrayList<ClassSubject> classSubjects;
  private ArrayList<Teacher> teachers;

  public ClassSubjectInstance[] getTimetable() {
    return timetable;
  }

  public void initializeArrayWithTotalWeeklyHours() {

  }

  public void createRandomTimeTable() {

  }
}
